--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,16 @@
     "dev": "nodemon index.js"
   },
   "author": "Ömer Faruk Sezen",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
+    "mongoose": "^8.8.1"
+  }
 }
